--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-json": "^2.2.16",
     "gatsby-transformer-sharp": "^2.3.1",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "slug": "^1.1.0",
     "styled-components": "^4.4.1",
     "styled-normalize": "^8.0.6",
     "styled-tools": "^1.7.1"
