--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-json": "^2.2.16",
     "gatsby-transformer-sharp": "^2.3.1",
+    "gatsby-transformer-yaml": "^2.2.15",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
