Change quiz title

--- a/data/quizzes/voce-realmente-conhece-as-skins-do-fortnite.yaml
+++ b/data/quizzes/voce-realmente-conhece-as-skins-do-fortnite.yaml
@@ -1,5 +1,5 @@
 type: quiz
-title: Você realmente conhece todas as skins do Fortnite?
+title: Você realmente conhece as skins do Fortnite?
 game: Fortnite
 image:
   name: Skins Fortnite
