--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-share": "^3.0.1",
     "styled-components": "^4.4.1",
     "styled-normalize": "^8.0.6",
     "styled-tools": "^1.7.1",
