Improve document responsive, and fix question animation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
     "styled-components": "^4.4.1",
+    "styled-media-query": "^2.1.2",
     "styled-normalize": "^8.0.6",
     "styled-tools": "^1.7.1",
     "uuid": "^3.3.3"
