--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-transformer-yaml": "^2.2.15",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
