Trying make a result url

--- a/data/documents/qual-pro-player-de-fortnite-voce-seria.yaml
+++ b/data/documents/qual-pro-player-de-fortnite-voce-seria.yaml
@@ -87,56 +87,66 @@ questions:
         key: D
         text: Squad
 result:
+  pre: Eu seria
   statement: Você seria
   items:
       -
+        id: b8d723ec-c8dd-4ca1-ad81-a634067bda08
         title: Igor "drakoNz" Fernandes
         image:
           name: Igor Fernandes
           src: ../images/qual-pro-player-de-fortnite-voce-seria/igor-fernandes.jpg
       -
+        id: f7780242-43b0-4324-a33d-850cbb6f5082
         title: Nicolas "Nicks" Polonio
         image:
           name: Nicolas Polonio
           src: ../images/qual-pro-player-de-fortnite-voce-seria/nicolas-polonio.jpg
       -
+        id: 252aa0f8-52c8-4195-8d7c-c0f26079d244
         title: Gabriel "MasteerXD" Marques
         image:
           name: Gabriel Marques
           src: ../images/qual-pro-player-de-fortnite-voce-seria/gabriel-marques.jpg
       -
+        id: af197dcd-64ea-4097-b6e7-b0d4308b869e
         title: Patrick "blackoutz" Garcia
         image:
           name: Patrick Garcia
           src: ../images/qual-pro-player-de-fortnite-voce-seria/patrick-garcia.jpg
       -
+        id: c97fe387-dba8-4484-8a0b-a6b4a57eee0b
         title: Leonardo "leleo" Dametto
         image:
           name: Leonardo Dametto
           src: ../images/qual-pro-player-de-fortnite-voce-seria/leonardo-dametto.jpg
       -
+        id: d80019c7-e6d8-4237-ba01-f71a6dce9617
         title: Thales "Pulgaboy" Henrique
         image:
           name: Thales Henrique
           src: ../images/qual-pro-player-de-fortnite-voce-seria/thales-henrique.jpg
       -
+        id: 214a8896-ef64-4677-9bf0-342ba736b618
         title: Rodrigo "Avlr" Avelar
         image:
           name: Rodrigo Avelar
           src: ../images/qual-pro-player-de-fortnite-voce-seria/rodrigo-avelar.jpg
       -
+        id: fe7bd473-5c02-40e3-a917-3cdb01975b56
         title: Henrique "kurtz" Kurtz
         image:
           name: Henrique Kurtz
           src: ../images/qual-pro-player-de-fortnite-voce-seria/henrique-kurtz.jpg
       -
+        id: a2da94ee-83d3-47de-bafb-18ed777d1979
         title: Fabio "Faah" Henrique
         image:
           name: Fabio Henrique
           src: ../images/qual-pro-player-de-fortnite-voce-seria/fabio-henrique.jpg
       -
+        id: e9982abe-f587-4872-84dd-e80743ca1c2a
         title: Gustavo "technoviking46" Trevisan
         image:
           name: Gustavo Trevisan
           src: ../images/qual-pro-player-de-fortnite-voce-seria/gustavo-trevisan.jpg
-
