--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.1",
     "gatsby-transformer-yaml": "^2.2.15",
+    "lodash": "^4.17.15",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
