--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-pose": "^4.0.9",
     "react-share": "^3.0.1",
     "styled-components": "^4.4.1",
     "styled-media-query": "^2.1.2",
