--- a/data/documents/voce-realmente-conhece-as-skins-do-fortnite.yaml
+++ b/data/documents/voce-realmente-conhece-as-skins-do-fortnite.yaml
@@ -198,5 +198,6 @@ questions:
         key: D
         text: Criptograma
 result:
-  pre: Eu acertei
-  statement: Você acertou
+  statement:
+    final: Você acertou
+    share: Eu acertei %s pergunta(s)! E você, realmente conhece as skins do Fortnite?
