Remove shuffle function from test options

--- a/data/documents/qual-pro-player-de-fortnite-voce-seria.yaml
+++ b/data/documents/qual-pro-player-de-fortnite-voce-seria.yaml
@@ -37,7 +37,7 @@ questions:
         text: Temporada 7, 8 ou 9
       -
         key: D
-        text: Temporada 1 Capítulo 2
+        text:  'Capítulo 2: Temporada 1'
   -
     id: 40b52bc1-efb8-4d41-a47b-969b4378ff04
     title: Qual seu time brasileiro preferido?
