--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.25",
+    "gatsby-plugin-netlify-cms": "^4.1.27",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-robots-txt": "^1.5.0",
@@ -19,6 +20,7 @@
     "gatsby-transformer-sharp": "^2.3.1",
     "gatsby-transformer-yaml": "^2.2.15",
     "lodash": "^4.17.15",
+    "netlify-cms-app": "^2.9.7",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
