Add initial netlify cms config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,8 +9,8 @@ media_folder: static/assets/images
 public_folder: assets/images
 
 collections:
-  - name: "documents"
-    label: "Documents"
+  - name: "document"
+    label: "Document"
     folder: "data/documents"
     create: true
     slug: "{{slug}}"
