--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,21 +9,25 @@ media_folder: static/assets/images
 public_folder: assets/images
 
 collections:
-  - name: "document"
-    label: "Document"
-    folder: "data/documents"
+  - name: 'document'
+    label: 'Document'
+    folder: 'data/documents'
     create: true
-    slug: "{{slug}}"
+    slug: '{{slug}}'
     editor:
      preview: false
     fields:
-      - { label: "Type", name: "type", widget: "string" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Game", name: "game", widget: "string" }
-      - { label: "Image", name: "image", widget: "image", allow_multiple: false }
-      - { label: "Featured", name: "featured", widget: "boolean" }
+      - { label: 'Type', name: 'type', widget: 'string' }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Game', name: 'game', widget: 'string' }
+      - label: 'Image', 
+        name: 'image', 
+        widget: 'object'
+        - { label: 'Name', name: 'name', widget: 'string'}
+        - { label: 'Source', name: 'src', widget: 'string'}
+      - { label: 'Featured', name: 'featured', widget: 'boolean' }
 
       # -
-      # - { label: "Publish Date", name: "date", widget: "datetime" }
-      # - { label: "Description", name: "description", widget: "string" }
-      # - { label: "Body", name: "body", widget: "markdown" }
+      # - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      # - { label: 'Description', name: 'description', widget: 'string' }
+      # - { label: 'Body', name: 'body', widget: 'markdown' }
