--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.34",
     "gatsby-transformer-sharp": "^2.3.1",
-    "gatsby-transformer-yaml": "^2.2.15",
     "lodash": "^4.17.15",
     "netlify-cms-app": "^2.9.7",
     "polished": "^3.4.2",
