--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^5.2.1",
     "react-infinite-scroll-component": "^5.0.3",
     "react-share": "^3.0.1",
+    "slug": "^1.1.0",
     "styled-components": "^4.4.1",
     "styled-media-query": "^2.1.2",
     "styled-normalize": "^8.0.6",
