--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.17.6",
     "gatsby-background-image": "^0.8.18",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-google-analytics": "^2.1.28",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-netlify-cms": "^4.1.27",
