--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "clipboard": "^2.0.4",
     "gatsby": "^2.17.6",
     "gatsby-background-image": "^0.8.18",
     "gatsby-image": "^2.2.30",
